# CeresTask

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: CeresTaskConfig.cmake
include/CeresTask/: Executor.h  Task.h  TaskGroup.h  TaskID.h  TaskSystem.h
src/: Executor.cpp  RandomString.cpp  RandomString.h  RegisteredTask.cpp  RegisteredTask.h  Singleton.h  Task.cpp  TaskGroup.cpp  TaskID.cpp  TaskSingleton.cpp  TaskSingleton.h  TaskState.cpp  TaskState.h  TaskSystem.cpp
test/: CMakeLists.txt  RandomString.cpp  RandomString.h  TaskGroupTest.cpp  TaskIDTest.cpp  TaskingTest.cpp  TemporaryDirectory.cpp  TemporaryDirectory.h  TestTask.cpp  TestTask.h  UsageTests.cpp
